[package]
name = "bitte"
version = "0.1.0"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5", features = ["rt", "net", "macros"] }
warp = "0.3"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
log = "0.4"
env_logger = "0.8"
handlebars = "3.5"
serde = "1.0"
lazy_static = "1.4"
percent-encoding = "2.1"
thiserror = "1.0"
structopt = "0.3"