[package]
name = "bitte"
version = "0.1.0"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["rt", "net", "macros"] }
warp = "0.3"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
log = "0.4"
env_logger = "0.9"
handlebars = "4.0"
serde = "1.0"
percent-encoding = "2.1"
thiserror = "1.0"
structopt = "0.3"
humansize = "1.1"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]