[package]
name = "bitte"
version = "1.0.2"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["rt", "net", "macros"] }
warp = "0.3.1"
rusoto_core = { version = "0.47", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.47", default_features = false, features=["rustls"] }
log = "0.4.14"
env_logger = "0.9"
handlebars = "4.1.2"
serde = "1.0.130"
percent-encoding = "2.1.0"
thiserror = "1.0.28"
structopt = "0.3.23"
humansize = "1.1.1"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true